[package]
name = "docker-clone"
version = "0.1.0"
edition = "2024"

[lib]
name = "docker_clone"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
nix = { version = "0.27", features = ["fs","process", "sched", "mount","hostname","user","socket"] }
libc = "0.2"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
mockall = "0.12"
